--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -57,7 +57,12 @@
 
                 </div><!--end card body-->
 
-
+<!--                <div class="col">-->
+<!--                    <div class="card" th:if="${dto.fileNames != null && dto.fileNames.size() > 0}">-->
+<!--                        <img class="card-img-top"-->
+<!--                             th:each="fileName: ${dto.fileNames}"-->
+<!--                             th:src="|/view/${fileName}|">-->
+<!--                    </div>-->
 
             </div><!--end card-->
         </div><!-- end col-->
@@ -77,6 +82,7 @@
             </ul>
         </div>
     </div>
+
 
 
     <div class="modal registerModal" tabindex="-1">
@@ -131,11 +137,86 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script src="/js/reply.js"></script>
-</div>
+
+<!--    </div>-->
+</div> <!-- layout fragment end -->
 
 
 <script layout:fragment="script" th:inline="javascript">
 
+const bno = [[${dto.bno}]]
+
+// console.log(get1(bno))
+// get1(bno).then(data=>{
+//     console.log(data)
+// }).catch(e=>{
+//     console.log("error",e)
+// })
+// function printReplies(page,size,goLast){
+//     getList({bno, page, size, goLast}).then(
+//         data => {console.log(data)}
+//     ).catch(e => {
+//         console.error(e)
+//     })
+// }
+
+// printReplies(1,10)
+
+const replyList = document.querySelector('.replyList') //댓글 목록 DOM
+const replyPaging = document.querySelector('.replyPaging') //페이지 목록 DOM
+
+function printList(dtoList){ //댓글 목록 출력
+    let str = '';
+
+    if(dtoList && dtoList.length > 0){
+
+        for (const dto of dtoList) {
+
+            str += `<li class="list-group-item d-flex replyItem">
+                      <span class="col-2">${dto.rno}</span>
+                      <span class="col-6" data-rno="${dto.rno}">${dto.replyText}</span>
+                      <span class="col-2">${dto.replyer}</span>
+                      <span class="col-2">${dto.regDate} </span>
+                    </li>`
+        }
+    }
+    replyList.innerHTML = str
+}
+
+function printPages(data){ //페이지 목록 출력
+
+    //pagination
+    let pageStr = '';
+
+    if(data.prev) {
+        pageStr +=`<li class="page-item"><a class="page-link" data-page="${data.start-1}">PREV</a></li>`
+    }
+
+    for(let i = data.start; i <= data.end; i++){
+        pageStr +=`<li class="page-item ${i == data.page?"active":""} "><a class="page-link" data-page="${i}">${i}</a></li>`
+    }
+
+    if(data.next) {
+        pageStr +=`<li class="page-item"><a class="page-link" data-page="${data.end +1}">NEXT</a></li>`
+    }
+    replyPaging.innerHTML = pageStr
+}
+
+
+function printReplies(page,size,goLast){
+
+    getList({bno, page,size, goLast}).then(
+        data => {
+            printList(data.dtoList) //목록 처리
+            printPages(data) //페이지 처리
+        }
+    ).catch(e => {
+        console.error(e)
+    })
+
+}
+
+printReplies(1,10, true)
 
 
 </script>
