240502 bno가 들어가지 않은 오류 발생. 일부 코드 수정하여 해결하였으나 근본적인 문제원인은 발견하지 못함.

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -58,7 +58,9 @@
                                 <th scope="col">RegDate</th>
                             </tr>
                             </thead>
-                            <tbody th:each="dto:${responseDTO.dtoList}">
+
+                            <tbody th:with="link = ${pageRequestDTO.getLink()}">
+                            <tr th:each="dto:${responseDTO.dtoList}"  >
                             <th scope="row">[[${dto.bno}]]</th>
                             <td>
                                 <a th:href="|@{/board/read(bno =${dto.bno})}&${link}|" class="text-decoration-none"> [[${dto.title}]] </a>
@@ -66,7 +68,10 @@
                             </td>
                             <td>[[${dto.writer}]]</td>
                             <td>[[${#temporals.format(dto.regDate, 'yyyy-MM-dd')}]]</td>
+                            </tr>
                             </tbody>
+
+
                         </table>
                         <div class="float-end">
                             <ul class="pagination flex-wrap">
