--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -161,7 +161,6 @@ const bno = [[${dto.bno}]]
 // }
 
 // printReplies(1,10)
-
 const replyList = document.querySelector('.replyList') //댓글 목록 DOM
 const replyPaging = document.querySelector('.replyPaging') //페이지 목록 DOM
 
@@ -217,6 +216,147 @@ function printReplies(page,size,goLast){
 }
 
 printReplies(1,10, true)
+
+
+//댓글 등록 모달
+const registerModal = new bootstrap.Modal(document.querySelector(".registerModal"))
+//registerModel
+const registerBtn = document.querySelector(".registerBtn")
+const replyText = document.querySelector(".replyText")
+const replyer = document.querySelector(".replyer")
+const closeRegisterBtn = document.querySelector(".closeRegisterBtn")
+
+
+document.querySelector(".addReplyBtn").addEventListener("click", function (e){
+    registerModal.show()
+},false)
+
+closeRegisterBtn.addEventListener("click", function (e){
+    registerModal.hide()
+},false)
+
+registerBtn.addEventListener("click", function(e){
+    const replyObj = {
+        bno:bno,
+        replyText:replyText.value,
+        replyer:replyer.value}
+
+    console.log(replyObj)
+
+    addReply(replyObj).then(result => {
+        alert(result.rno+"번 댓글이 등록되었습니다.")
+        registerModal.hide()
+        replyText.value = ''
+        replyer.value =''
+        printReplies(1,10, true) //댓글 목록 갱신
+    }).catch(e => {
+        alert("Exception...")
+    })
+}, false)
+
+
+
+let page = 1
+let size = 10
+
+replyPaging.addEventListener("click", function (e){
+
+    e.preventDefault()
+    e.stopPropagation()
+
+    const target = e.target
+
+    if(!target || target.tagName != 'A'){
+        return
+    }
+
+    const pageNum = target.getAttribute("data-page")
+    page = pageNum
+    printReplies(page, size)
+
+},false)
+
+
+//modifyModal
+const modifyModal = new bootstrap.Modal(document.querySelector(".modifyModal"))
+
+const replyHeader = document.querySelector(".replyHeader")
+const modifyText = document.querySelector(".modifyText")
+const modifyBtn = document.querySelector(".modifyBtn")
+const removeBtn = document.querySelector(".removeBtn")
+const closeModifyBtn = document.querySelector(".closeModifyBtn")
+
+
+replyList.addEventListener("click", function (e){
+
+    e.preventDefault()
+    e.stopPropagation()
+
+    const target = e.target
+
+    if(!target || target.tagName != 'SPAN'){
+        return
+    }
+
+    const rno = target.getAttribute("data-rno")
+
+    if(!rno){
+        return
+    }
+
+    getReply(rno).then(reply => { //댓글의 내용을 모달창에 채워서 보여주는
+
+        console.log(reply)
+        replyHeader.innerHTML = reply.rno
+        modifyText.value = reply.replyText
+        modifyModal.show()
+
+    }).catch(e => alert('error'))
+
+},false)
+
+
+modifyBtn.addEventListener("click", function(e) {
+
+    const replyObj = {
+        bno:bno,
+        rno:replyHeader.innerHTML,
+        replyText:modifyText.value}
+
+    modifyReply(replyObj).then(result => {
+        alert(result.rno+' 댓글이 수정되었습니다.')
+        replyText.value = ''
+        modifyModal.hide()
+        printReplies(page, size)
+
+    }).catch(e => {
+        console.log(e)
+    })
+},false)
+
+closeModifyBtn.addEventListener("click", function(e){
+
+    modifyModal.hide()
+
+}, false)
+
+removeBtn.addEventListener("click", function(e) {
+
+    removeReply(replyHeader.innerHTML).then(result => {
+
+        alert(result.rno +' 댓글이 삭제되었습니다.')
+        replyText.value = ''
+        modifyModal.hide()
+
+        page = 1 // 이 부분이 없다면 원래 페이지로
+
+        printReplies(page, size)
+
+    }).catch(e => {
+        console.log(e)
+    })
+},false)
+
 
 
 </script>
